--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="banner">
+  <p i18n>Offline System Map updates could be delayed. Actual conditions may vary.</p>
+</div>
+
 <app-drawer #sideMain i18n-title="@@title" title="Offline System Map">
 	<app-main-panel class="wrapper" (stationClicked)="onClickStation($event, sideMain, sideStation, sideRoute, true)" (routeClicked)="onClickRoute($event, sideMain, sideStation, sideRoute)"/>
 </app-drawer>
