--- a/src/app/component/panel/main-panel.component.html
+++ b/src/app/component/panel/main-panel.component.html
@@ -26,6 +26,15 @@
 				</div>
 			}
 			<p-divider/>
+			<a i18n-href href="./zh-Hans">
+				<button pButton class="icon-button" severity="secondary" [fluid]="true">
+					<div class="row gap-small">
+						<div class="material-icons">translate</div>
+						<div i18n>简体中文</div>
+					</div>
+				</button>
+			</a>
+			<p-divider/>
 		</div>
 		<div class="spacing"></div>
 		<div class="row gap-small center padding-sides padding-top-bottom">
