--- a/src/app/component/panel/main-panel.component.html
+++ b/src/app/component/panel/main-panel.component.html
@@ -26,7 +26,7 @@
 				</div>
 			}
 			<p-divider/>
-			<a i18n-href href="./zh-Hans">
+			<a i18n-href href="../zh-Hans/">
 				<button pButton class="icon-button" severity="secondary" [fluid]="true">
 					<div class="row gap-small">
 						<div class="material-icons">translate</div>
