--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	background-color: #ffd54f;
+	background-color: var(--banner-background-color);
 	height: 25px;
 	z-index: 1;
 	p {
