--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,6 @@
 
 <app-map
 		(stationClicked)="onClickStation($event, sideMain, sideStation, sideRoute, false)"/>
-<button pButton class="button-corner" [rounded]="true" [text]="true" [raised]="true" size="large" (click)="onClickMain(sideMain, sideStation, sideRoute)" pTooltip="Menu" tooltipPosition="left">
+<button pButton class="button-corner" [rounded]="true" [text]="true" [raised]="true" size="large" (click)="onClickMain(sideMain, sideStation, sideRoute)" i18n-pTooltip pTooltip="Menu" tooltipPosition="left">
 	<div class="material-icons">menu</div>
 </button>
